# Nava_Backend

./: .env  .gitignore  Dockerfile  README.md  main.py  master_db.json  pyproject.toml
app/: __init__.py
app/api_v1/org/: schema.py  service.py
app/api_v1/user/: schema.py  service.py
app/utils/: config.py  database.py
tests/: test_main.py  test_org.py  test_user.py
