[tool.poetry]
name = "nava-backend"
version = "0.1.0"
description = ""
authors = ["Aankit Roy <aankitroy1990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

fastapi = "^0.68.0"
pydantic = "^1.8.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
uvicorn = "^0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
